crates/next-custom-transforms/tests/errors/react-server-components/client-graph/multiple/input.js
export const metadata = {}

export function generateMetadata() {}

export function getServerSideProps() {}

export default function () {
  return null
}
